add resource dependant dbscan parameters (via config)